# kerbcast

./: .gitignore  CLAUDE.md  Kerbcam.ckan  Kerbcast.ckan  KerbcastKos.ckan  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-kerbcam-shaders.yml  fx-previews.yml  native-readback-ci.yml  plugin-ci.yml  prepare-release.yml  protocol-ci.yml  publish-protocol.yml  release.yml  sidecar-ci.yml  unity-request-activation.yml  web-ci.yml
GameData/Kerbcam/: Kerbcam.version
GameData/Kerbcam/HullcamShaders/: LICENSE.md
GameData/Kerbcast/: Kerbcast.version
GameData/KerbcastKos/: KerbcastKos.version  README.md
Plugin/: Kerbcam.csproj  Kerbcast.csproj  settings.cfg
Plugin/AdaptiveQualityController.Tests/: AdaptiveQualityController.Tests.csproj  Program.cs
Plugin/AimSourceRegistry.Tests/: Program.cs
Plugin/CameraId.Tests/: Program.cs
Plugin/CaptureEpoch.Tests/: CaptureEpoch.Tests.csproj  Program.cs
Plugin/ControlBlock.Tests/: ControlBlock.Tests.csproj  Program.cs
Plugin/EvaPovDedupe.Tests/: EvaPovDedupe.Tests.csproj  Program.cs
Plugin/InFlightSignal.Tests/: InFlightSignal.Tests.csproj  Program.cs
Plugin/Kerbcam/: AdaptiveQualityController.cs  AsyncReadbackRegistryFix.cs  ControlBlock.cs  KerbcamCamera.cs  KerbcamCore.cs  KerbcamSettings.cs  MmapFrameRing.cs  PartCapabilities.cs  QualityClamp.cs  ScaledSunLightHelper.cs  ShedController.cs  StaggerBudgetController.cs
Plugin/Kerbcam/Fx/: BowshockEffect.cs  CoreSheathEffect.cs  EmbersEffect.cs  FxHost.cs  KerbcamFxAssets.cs  TrailEffect.cs  WindwardProfile.cs
Plugin/Kerbcam/HullcamBlit/: HullcamFilterBlit.cs
Plugin/Kerbcam/TUFXProfiles/: kerbcam.cfg
Plugin/Kerbcast/: CameraId.cs  CameraLayers.cs  CaptureEpoch.cs  ControlBlock.cs  CrewProvider.cs  EvaPovDedupe.cs  HullcamProvider.cs  ICameraMountSource.cs  InFlightSignal.cs  KerbalFaceCamera.cs  KerbcastCamera.cs  KerbcastControl.cs  KerbcastCore.cs  KerbcastSettings.cs  KerbcastSidecarHost.cs  PanAim.cs  PartCapabilities.cs  PhaseTimings.cs  SettingsLayer.cs  TUFXIntegration.cs  TrackAim.cs
Plugin/Kerbcast/Fx/: FireflyCaptureEffect.cs
Plugin/Kerbcast/Integrations/: DeferredIntegration.cs  IntegrationHost.cs  ParallaxIntegration.cs  ParallaxScatterDrive.cs  ScattererFlareProbe.cs  ScattererIntegration.cs
Plugin/KerbcastKos/: AimSourceRegistry.cs  AssemblyInfo.cs  KerbcastAddon.cs  KerbcastAimObserver.cs  KerbcastCameraStruct.cs  KosCameraView.cs  RealKerbcastControl.cs  UserDelegateAimLease.cs
Plugin/KerbcastKos.Tests/: FakeKerbcastControl.cs  KerbcastAddonTests.cs  KerbcastKos.Tests.csproj
Plugin/MmapFrameRing.Tests/: MmapFrameRing.Tests.csproj  Program.cs
Plugin/PanAim.Tests/: PanAim.Tests.csproj  Program.cs
Plugin/QualityClamp.Tests/: Program.cs  QualityClamp.Tests.csproj
Plugin/SettingsLayer.Tests/: Program.cs  SettingsLayer.Tests.csproj
Plugin/ShedController.Tests/: Program.cs
Plugin/StaggerBudgetController.Tests/: Program.cs  StaggerBudgetController.Tests.csproj
Plugin/TrackAim.Tests/: Program.cs  TrackAim.Tests.csproj
client-sdk/react/: README.md  package.json
client-sdk/react/src/: CameraFeed.test.tsx  CameraFeed.tsx  HardHatIcon.tsx  StandbyIcon.tsx  cameraLabels.ts  context.tsx  index.ts
client-sdk/typescript/: CHANGELOG.md  PUBLISHING.md  README.md  package.json
client-sdk/typescript/src/: client.test.ts  client.ts  index.ts  noise.test.ts  noise.ts  testing.test.ts
docs/: INSTALL.md  TROUBLESHOOTING.md  testing-backlog.md
live_tests/: kerbcam.md  kerbcast-kos.md  kerbcast-test-stack.ckan  kerbcast.md  modswap.sh  modtest.md
live_tests/cards/: _template.md  deferred.md  firefly.md  full-stack.md  parallax.md
scripts/: bump-version.sh
sidecar/: Cargo.toml  README.md  build.rs
sidecar/examples/: fake_camera.rs
sidecar/src/: cameras.rs  lib.rs  main.rs  signalling.rs  signalling_index.html
sidecar/src/encoder/: annexb.rs  convert.rs  escalation.rs  ffi_shim.c  libva.rs  mediafoundation.rs  mod.rs  nvenc.rs  software.rs  videotoolbox.rs
sidecar/src/protocol/: mod.rs
sidecar/src/shared_mem/: control.rs  mmap.rs  mod.rs
sidecar/src/webrtc/: peer.rs
sidecar/testdata/: frame_ring_v1.ring
sidecar/tests/: mmap_ring_to_encoder.rs  synthetic_frame_pipeline.rs
web/: README.md
web/src/: App.test.tsx  App.tsx  CrewBar.test.tsx  CrewBar.tsx  DevPanel.tsx  ErrorToast.tsx  Grid.tsx  SettingsPanel.tsx  ShedBanner.tsx  StandbyOverlay.tsx  Tile.test.tsx  Tile.tsx  connectionManager.test.ts  connectionManager.ts  labels.test.ts  labels.ts  settings.ts  styles.css  tiles.test.ts  tiles.ts
web/src/mock/: driver.ts
(+23 files in other folders)
