[package]
name = "kerbcam-sidecar"
version = "0.1.0"
edition = "2021"
description = "kerbcam KSP camera-streaming sidecar (per-OS hardware encode + WebRTC)"
license = "MIT OR Apache-2.0"
publish = false
default-run = "kerbcam-sidecar"

[lib]
name = "kerbcam_sidecar"
path = "src/lib.rs"

[[bin]]
name = "kerbcam-sidecar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }

# Software H.264 encoder (Cisco OpenH264). Bundled source — builds the C
# library at compile time, no system libs required. The "source" feature is
# the crate's default; we name it explicitly so a future swap to "libloading"
# (precompiled binary) is a one-line change.
openh264 = { version = "0.9", default-features = false, features = ["source"] }

# File-backed shared memory for the KSP-plugin <-> sidecar frame handoff.
# Plain mmap of a regular file (NOT POSIX shm_open) so the C# side of the
# bridge can use System.IO.MemoryMappedFiles.MemoryMappedFile.CreateFromFile
# with the same path — Mono on Linux's MMF API uses regular files, not
# /dev/shm/, so we have to meet it where it lives.
memmap2 = "0.9"

# Transport deps still deferred:
#   webrtc-rs              — peer connection, media tracks, data channels
#   ffmpeg-next            — for the tier-1 libva hardware encode backend on
#                            Steam Deck (currently a stub)

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
